--- a/project/template.html
+++ b/project/template.html
@@ -129,11 +129,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="vh-100 bg-info"></div>
-                </div>
-                <div class="col-12">
-                    <div class="vh-100"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-xl-8">
+                    <div class="card overflow-hidden shadow">
+                        <div class="">
+                            <div class="d-flex justify-content-between align-items-center p-2">
+                                <h4 class="mb-0 fw-bold">Order & Viewer</h4>
+                                <div class="">
+                                    <img src="./img/user/avatar1.jpg" class="ov-img rounded-circle" alt="">
+                                    <img src="./img/user/avatar2.jpg" class="ov-img rounded-circle" alt="">
+                                    <img src="./img/user/avatar3.jpg" class="ov-img rounded-circle" alt="">
+                                    <img src="./img/user/avatar4.jpg" class="ov-img rounded-circle" alt="">
+                                    <img src="./img/user/avatar5.jpg" class="ov-img rounded-circle" alt="">
+                                </div>
+                            </div>
+                            
+                            <canvas id="ov" height="150"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -145,6 +160,7 @@
 <script src="./vendor/boostrap/js/bootstrap.bundle.min.js"></script>
 <script src="./vendor/way_point/jquery.waypoints.js"></script>
 <script src="./vendor/counter_up/counter_up.js"></script>
+<script src="./vendor/chart_js/chart.min.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/dashboard.js"></script>
 </body>
