--- a/project/template.html
+++ b/project/template.html
@@ -131,8 +131,8 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-xl-8">
+            <div class="row align-items-end">
+                <div class="col-12 col-xl-7">
                     <div class="card overflow-hidden shadow">
                         <div class="">
                             <div class="d-flex justify-content-between align-items-center p-2">
@@ -147,6 +147,22 @@
                             </div>
                             
                             <canvas id="ov" height="150"></canvas>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-xl-5">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="item-card">
+                                <div class="d-flex justify-content-between align-items-end">
+                                    <div class="">
+                                        <p class="fw-bolder text-black-50 mb-0">500 MMK</p>
+                                        <h4 class="fw-bold mb-4">Coffee Cup</h4>
+                                    </div>
+                                    <img src="./img/item/item1.png" class="item-card-img" alt="">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
