--- a/project/template.html
+++ b/project/template.html
@@ -133,7 +133,7 @@
 
             <div class="row align-items-end">
                 <div class="col-12 col-xl-7">
-                    <div class="card overflow-hidden shadow">
+                    <div class="card overflow-hidden shadow mb-4">
                         <div class="">
                             <div class="d-flex justify-content-between align-items-center p-2">
                                 <h4 class="mb-0">Order & Viewer</h4>
@@ -151,8 +151,8 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-xl-5">
-                    <div class="card">
+                <div class="col-12 col-md-6 col-xl-5">
+                    <div class="card mb-4 item-carousel-card">
                         <div class="card-body">
                             <div id="carouselExampleIndicators" class="carousel item-carousel slide" data-bs-ride="true">
                                 <div class="carousel-indicators" style="bottom:-30px">
@@ -227,6 +227,20 @@
                                 
                               </div>
                             
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-xl-5">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center p-2">
+                                <h4 class="mb-0">Order & Place</h4>
+                                <div class="">
+                                    <i class="feather-pie-chart h4 mb-0 text-primary"></i>
+                                </div>
+                            </div>
+                            <canvas id="op" height="200"></canvas>
                         </div>
                     </div>
                 </div>
