--- a/project/template.html
+++ b/project/template.html
@@ -244,6 +244,90 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-12 col-xl-7">
+                    <div class="card overflow-hidden mb-4">
+                        
+                        <div class="">
+                            <div class="d-flex justify-content-between align-items-center p-2">
+                                <p class="mb-0">Subscriber List</p>
+                                <div class="">
+                                    <i class="feather-more-vertical h4 mb-0 text-primary"></i>
+                                </div>
+                            </div>
+                            <table class="table table-hover sub-list mb-0">
+                                <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Company</th>
+                                    <th>Start Date</th>
+                                    <th>Status</th>
+                                    <th>Amount</th>
+                                    <th>Action</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Michael Austin</td>
+                                    <td>ABC Fintech LTD.</td>
+                                    <td>Jan 1,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-danger">Close</span></td>
+                                    <td>$ 1000.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>Aldin Rakić</td>
+                                    <td>ACME Pvt LTD.</td>
+                                    <td>Jan 10,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-success">Open</span></td>
+                                    <td>$ 3000.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>İris Yılmaz</td>
+                                    <td>Collboy Tech LTD.</td>
+                                    <td>Jan 12,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-success">Open</span></td>
+                                    <td>$ 2000.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>Lidia Livescu</td>
+                                    <td>My Fintech LTD.</td>
+                                    <td>Jan 14,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-danger">Close</span></td>
+                                    <td>$ 1100.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>Michael Austin</td>
+                                    <td>ABC Fintech LTD.</td>
+                                    <td>Jan 1,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-danger">Close</span></td>
+                                    <td>$ 1000.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>Aldin Rakić</td>
+                                    <td>ACME Pvt LTD.</td>
+                                    <td>Jan 10,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-success">Open</span></td>
+                                    <td>$ 3000.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>İris Yılmaz</td>
+                                    <td>Collboy Tech LTD.</td>
+                                    <td>Jan 12,2019</td>
+                                    <td><span class="badge rounded-pill text-bg-success">Open</span></td>
+                                    <td>$ 2000.00</td>
+                                    <td class="center-align"><a href="#"><i class="feather-trash-2 text-danger"></i></a></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
