--- a/project/template.html
+++ b/project/template.html
@@ -12,6 +12,8 @@
 <body>
 <section class="main container-fluid">
     <div class="row">
+
+        <!-- sidebar Start -->
         <div class="col-12 col-lg-3 col-xl-2 vh-100 sidebar">
             <div class="d-flex justify-content-between align-items-center py-2">
                 <div class="d-flex justify-content-center align-items-center">
@@ -25,6 +27,7 @@
                 </button>
             </div>
         </div>
+        <!-- sidebar End -->
         <div class="col-12 col-lg-9 col-xl-10 vh-100 content">
             <div class="row header mb-4">
                 <div class="col-12">
@@ -60,6 +63,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- content Area Start -->
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-6 col-xl-3">
                     <div class="card mb-4 status-card" onclick="go('https://google.com')">
@@ -329,6 +334,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Content Area End -->
         </div>
     </div>
 </section>
