--- a/project/item_add.html
+++ b/project/item_add.html
@@ -114,15 +114,13 @@
                                         <div class="form-group mb-2">
                                             <label for="c">Category</label>
                                             <select name="type" class="form-control custom-select" id="c">
-                                                <option value="0">ကုန်စို</option>
-                                                <option value="1">ကုန်ခြောက်</option>
+                                                <option value="" selected>Select Category</option>
                                             </select>
                                         </div>
                                         <div class="form-group mb-2">
                                             <label for="sc">Sub Category</label>
                                             <select name="type" class="form-control custom-select" id="sc">
-                                                <option value="0">ကုန်စို</option>
-                                                <option value="1">ကုန်ခြောက်</option>
+                                                <option value="" selected>Select Sub Category</option>
                                             </select>
                                         </div>
                                     </div>
@@ -173,6 +171,35 @@
 <script src="./vendor/counter_up/counter_up.js"></script>
 
 <script src="./js/app.js"></script>
+<script>
+
+    let category = ["phone","computer","TV"];
+    let subCategory = [
+        {name:"Samsung",category_id:0},
+        {name:"Mi",category_id:0},
+        {name:"HP",category_id:1},
+        {name:"Acer",category_id:1},
+        {name:"Panasonic",category_id:2}
+    ];
+
+
+    category.map(function (el,index){
+        $('#c').append(`<option value="${index}">${el}</option>`);
+    })
+
+    subCategory.map(function(el,index){
+        $('#sc').append(`<option value="${index}" data-category="${el.category_id}">${el.name}</option>`);
+    })
+
+    $('#c').on("change",function(){
+        let currentCategoryId = $(this).val();
+        $('#sc option').hide();
+        $(`[data-category=${currentCategoryId}]`).show();
+
+    });
+
+    
+</script>
 
 </body>
 </html>
