--- a/project/item_add.html
+++ b/project/item_add.html
@@ -84,7 +84,7 @@
                                 <h4 class="mb-0">
                                     <i class="feather-plus-circle text-primary me-1"></i>Add Item
                                 </h4>
-                                <a href="#" class="btn btn-outline-primary">
+                                <a href="item_list.html" class="btn btn-outline-primary">
                                     <i class="feather-list"></i>
                                 </a>
                             </div>
