--- a/project/dashboard.html
+++ b/project/dashboard.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 col-xl-3">
-                    <div class="card mb-4 status-card" onclick="go('https://google.com')">
+                    <div class="card mb-4 status-card" onclick="go('item_list.html')">
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-3">
@@ -111,7 +111,7 @@
                                     <p class="mb-2 h4 fw-bolder">
                                         <span class="counter-up">223</span>
                                     </p>
-                                    <p class="mb-0 text-black-50">Today Items</p>
+                                    <p class="mb-0 text-black-50">Total Items</p>
                                 </div>
                             </div>
                         </div>
