--- a/project/item_add.html
+++ b/project/item_add.html
@@ -69,8 +69,8 @@
                 <div class="col-12">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                          <li class="breadcrumb-item"><a href="#">Home</a></li>
-                          <li class="breadcrumb-item"><a href="#">Item</a></li>
+                          <li class="breadcrumb-item"><a href="dashboard.html">Home</a></li>
+                          <li class="breadcrumb-item"><a href="item_list.html">Item</a></li>
                           <li class="breadcrumb-item active" aria-current="page">Add Item</li>
                         </ol>
                     </nav>
