--- a/project/item_list.html
+++ b/project/item_list.html
@@ -70,8 +70,7 @@
                 <div class="col-12">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                          <li class="breadcrumb-item"><a href="#">Home</a></li>
-                          <li class="breadcrumb-item"><a href="#">Item</a></li>
+                          <li class="breadcrumb-item"><a href="dashboard.html">Home</a></li>
                           <li class="breadcrumb-item active" aria-current="page">Item List</li>
                         </ol>
                     </nav>
